--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     image: nginx:alpine
     container_name: nginx_webserver
     volumes:
-      - /root/src/src/:/var/www
+      - ./src/:/var/www
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "80:80"
